--- a/.upptimerc.yml
+++ b/.upptimerc.yml
@@ -1,23 +1,26 @@
 owner: xtexChooser
 repo: upptime
+user-agent: xtexChooser
 
 sites:
-  - name: xtex's Blog
+  - name: Blog
     url: https://xtexx.ml/blog/
+  - name: Server cn-gz1
+    check: "tcp-ping"
+    url: cn-gz1.svr.xtexx.ml
+    port: 22
 
 status-website:
-  # Add your custom domain name, or remove the `cname` line if you don't have a domain
-  # Uncomment the `baseUrl` line if you don't have a custom domain and add your repo name there
   cname: upptime.xtexx.ml
-  # baseUrl: /your-repo-name
-  logoUrl: https://raw.githubusercontent.com/upptime/upptime.js.org/master/static/img/icon.svg
-  name: Upptime
-  introTitle: "**Upptime** is the open-source uptime monitor and status page, powered entirely by GitHub."
-  introMessage: This is a sample status page which uses **real-time** data from our [GitHub repository](https://github.com/upptime/upptime). No server required — just GitHub Actions, Issues, and Pages. [**Get your own for free**](https://github.com/upptime/upptime)
+  logoUrl: https://xtexx.ml/blog/icon.png
+  name: xtex's Upptime
+  introTitle: "Service status monitoring by xtex"
+  introMessage: "This shows service availablity information for services maintainced by @xtexChooser."
   navbar:
     - title: Status
       href: /
     - title: GitHub
       href: https://github.com/$OWNER/$REPO
-# Upptime also supports notifications, assigning issues, and more
-# See https://upptime.js.org/docs/configuration
+
+assignees:
+  - xtexChooser
